[workspace]

[package]
name = "ctjs"
version = "0.0.1"
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"
description = "compile time javascript as a rust proc macro"
license = "MIT"
homepage = "https://github.com/brigand/ctjs-rs"
repository = "https://github.com/brigand/ctjs-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctjs_macros = { path = "./ctjs_macros", version = "=0.0.1" }