[package]
name = "ctjs_macros"
version = "0.1.0"
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
quick-js = "0.4.1"