[package]
name = "ctjs_macros"
version = "0.0.1"
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"
description = "compile time javascript as a rust proc macro"
license = "MIT"
homepage = "https://github.com/brigand/ctjs-rs/blob/master/ctjs_macros"
repository = "https://github.com/brigand/ctjs-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
quick-js = "0.4.1"
syn = { version = "1", features = ["derive", "extra-traits"] }
syn-serde = { version = "0.2", features = ["json"] }
serde = "1"
serde_json = "1"